update log iso string

--- a/insertdata.ipynb
+++ b/insertdata.ipynb
@@ -169,7 +169,7 @@
    "source": [
     "import json\n",
     "import requests\n",
-    "url = \"http://52.63.27.28:8080/solutions\"\n",
+    "url = \"/solutions\"\n",
     "for idx,solution in enumerate(result):\n",
     "    data=json.dumps(solution)\n",
     "    print(idx,requests.post(url,data=data,headers={\"Authorization\":f\"Bearer {token}\",\"Content-Type\":\"application/json\"}).json())"
